Update env - remove local, gym , realtosmart, lead database connection

--- a/.env
+++ b/.env
@@ -19,9 +19,8 @@ PHP_MEMORY_LIMIT=2048M
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
-app.baseURL = 'https://admin.ajasys.com/'
 # If you have trouble with `.`, you could also use `_`.
-app_baseURL = 'https://admin.ajasys.com/'
+app_baseURL = 'https://ajasys.in/'
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
@@ -38,58 +37,12 @@ database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
 
- database.second.hostname = localhost
- database.second.database = rudrramc_erpCRM
- database.second.username = rudrramc_erpCRM
- database.second.password = C2[&m8{5%^Jf
- database.second.DBDriver = MySQLi
-
- database.third.hostname = localhost
- database.third.database = rudrramc_devdata
- database.third.username = rudrramc_devdata
- database.third.password = Z]*tQpra=F@W
- database.third.DBDriver = MySQLi
-
-database.realtosmart.hostname = localhost
-database.realtosmart.database = rudrramc_master_table
-database.realtosmart.username = rudrramc_master_table
-database.realtosmart.password = -js}U)VQFr.T
-database.realtosmart.DBDriver = MySQLi
-database.realtosmart.DBPrefix =
-database.realtosmart.port = 3306
-
-database.leadmgtcrm.hostname = localhost
-database.leadmgtcrm.database = rudrramc_leadmgt
-database.leadmgtcrm.username = rudrramc_leadmgt
-database.leadmgtcrm.password = $1~%T_8?IFi&
-database.leadmgtcrm.DBDriver = MySQLi
-database.leadmgtcrm.DBPrefix =
-database.leadmgtcrm.port = 3306
-
-database.gymsmart.hostname = localhost
-database.gymsmart.database = rudrramc_gymsmart
-database.gymsmart.username = rudrramc_gymsmart
-database.gymsmart.password = NvZMwW$UYq+Q
-database.gymsmart.DBDriver = MySQLi
-database.gymsmart.DBPrefix =
-database.gymsmart.port = 3306
-
-database.gym.hostname = localhost
-database.gym.database = rudrramc_gymsmart
-database.gym.username = rudrramc_gymsmart
-database.gym.password = NvZMwW$UYq+Q
-database.gym.DBDriver = MySQLi
-database.gym.DBPrefix =
-database.gym.port = 3306
-
-# database.tests.hostname = localhost
-# database.tests.database = ci4_test
-# database.tests.username = root
-# database.tests.password = root
-# database.tests.DBDriver = MySQLi
-# database.tests.DBPrefix =
-# database.tests.port = 3306
-
+database.second.hostname = localhost
+database.second.database = rudrramc_campaign
+database.second.username = rudrramc_campaign
+database.second.password = mMzAx-ftZ^!%
+database.second.DBDriver = MySQLi
+ 
 #--------------------------------------------------------------------
 # CONTENT SECURITY POLICY
 #--------------------------------------------------------------------
