Update for my database connection

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PHP_MEMORY_LIMIT=2048M
 # APP
 #--------------------------------------------------------------------
 # If you have trouble with `.`, you could also use `_`.
-app_baseURL = 'https://ajasys.in/'
+app_baseURL = 'http://localhost/admincampaign/'
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
@@ -31,16 +31,16 @@ app_baseURL = 'https://ajasys.in/'
 #-----------if change  password or any credentials  then change in erp.realsmart.com
 database.default.hostname = localhost
 database.default.database = rudrramc_master_table
-database.default.username = rudrramc_master_table
-database.default.password = -js}U)VQFr.T
+database.default.username = root
+database.default.password = 
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
 
 database.second.hostname = localhost
 database.second.database = rudrramc_campaign
-database.second.username = rudrramc_campaign
-database.second.password = mMzAx-ftZ^!%
+database.second.username = root
+database.second.password = 
 database.second.DBDriver = MySQLi
  
 #--------------------------------------------------------------------
