--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PHP_MEMORY_LIMIT=2048M
 # APP
 #--------------------------------------------------------------------
 # If you have trouble with `.`, you could also use `_`.
-app_baseURL = 'https://ajasys.in/'
+app_baseURL = 'http://localhost:8080/admincampaign/'
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
@@ -29,19 +29,19 @@ app_baseURL = 'https://ajasys.in/'
 #--------------------------------------------------------------------
 
 #-----------if change  password or any credentials  then change in erp.realsmart.com
-database.default.hostname = localhost
-database.default.database = rudrramc_master_table
-database.default.username = rudrramc_master_table
-database.default.password = -js}U)VQFr.T
-database.default.DBDriver = MySQLi
-database.default.DBPrefix =
-database.default.port = 3306
-
 database.second.hostname = localhost
-database.second.database = rudrramc_campaign
-database.second.username = rudrramc_campaign
-database.second.password = mMzAx-ftZ^!%
+database.second.database = rudrramc_master_table
+database.second.username = root
+database.second.password = 
 database.second.DBDriver = MySQLi
+database.second.DBPrefix =
+database.second.port = 3306
+
+database.default.hostname = localhost
+database.default.database = rudrramc_erpcrm
+database.default.username = root
+database.default.password = 
+database.default.DBDriver = MySQLi
  
 #--------------------------------------------------------------------
 # CONTENT SECURITY POLICY
