--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PHP_MEMORY_LIMIT=2048M
 # APP
 #--------------------------------------------------------------------
 # If you have trouble with `.`, you could also use `_`.
-app_baseURL = 'http://localhost:8080/admincampaign/'
+app_baseURL = 'http://localhost/admincampion/'
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
